# silkworm

./: .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: build-node.sh  node.md  node.yml  silkworm.md  silkworm.yml
cmake/: conan.cmake  mingw.cmake
cmake/Hunter/: config.cmake  extra_packages.cmake
cmd/: CMakeLists.txt  backend_kv_server.cpp  check_changes.cpp  check_senders.cpp  common.cpp  consensus.cpp  dbtool.cpp  download_headers.cpp  downloader.cpp  execute.cpp  scan_txs.cpp  silkworm.cpp
cmd/benchmark/: CMakeLists.txt
cmd/common/: rpcdaemon_options.cpp
cmd/dev/: check_changes.cpp  check_pow.cpp  check_senders.cpp  db_toolbox.cpp  scan_txs.cpp  toolbox.cpp
cmd/dev/jsonfile/: types.hpp
cmd/state-transition/: state_transition.cpp
cmd/test/: backend_kv_test.cpp  ethereum.cpp
core/: CMakeLists.txt
db/: CMakeLists.txt
eosevm/: CMakeLists.txt  assert.hpp  block_extra_data.cpp  block_extra_data.hpp  block_mapping.hpp  consensus_parameters.cpp  consensus_parameters.hpp  gas_prices.cpp  gas_prices.hpp  refund_v3.cpp  refund_v3.hpp  version.hpp
node/: CMakeLists.txt
silkworm/capi/: silkworm.cpp
silkworm/core/: CMakeLists.txt
silkworm/db/: CMakeLists.txt  access_layer.cpp  access_layer.hpp  access_layer_test.cpp  buffer.cpp  stage.cpp  stage.hpp  tables.hpp  util.cpp  util.hpp
silkworm/execution/: CMakeLists.txt
silkworm/node/: CMakeLists.txt
silkworm/rpc/: CMakeLists.txt  daemon.cpp  daemon.hpp  settings.hpp
silkworm/silkrpc/: daemon.cpp  daemon.hpp  settings.hpp
silkworm/sync/: sync.cpp  sync_pos.cpp  sync_pos_test.cpp
(+340 files in other folders)
